
WIP      Add an option to see ROM Maps image if it exists.
         Add an option in context menu "View ROM/Launcher".


[B]Advanced Emulator Launcher | version 0.9.7 | XX Sep 2017[/B]

WIP      Create a "fake" Parent/Clone list from filenames ala NARS (NARS Advanced ROM Sorting).
         In "Edit Launcher", "Audit ROMs / Launcher view mode" include a new option like
         "Create PClone based on filenames"

WIP      Add an option to create a default Parent ROM for Redump DATs or NoIntro DATs with no
         PClone information. See previous feature.

WIP      Use substituted artwork from the Parent/Clone group.
         So far implemented only in "Edit Launcher", "Manage ROMs", "Rescan ROMs local assets/artwork"

WIP      I discovered that in the ROM Scanner most of the time is spend looking for artwork. Before
         I though it was the Offline scraper the culprit. Instead of using FileName().exists()
         create a set with all files in the directory and use that for the search.

WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe, Japan or USA.
         This resembles what NARS No-Intro filtering does.

WIP      ROM scanner should be able to scrap all assets, not just the ones supported by the
         selected scraper. This will require a redesign of the current scraping engine.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628383#pid2628383 and next post.

FEATURE  Ability to import launcher and categories assets in the XML configuration files.
         Create a working example for Gamestarter addon. Also, refactor the AEL asset library.

FEATURE  Rename "Studio" database field to "Developer" in Launchers/ROMs.
         See https://forum.kodi.tv/showthread.php?tid=295463&pid=2625754#pid2625754

FEATURE  New Launcher asset 's_controller' for Console/Computer controller picture.

FEATURE  Renamed 's_thumb' -> 's_icon' in Categories/Launchers/Collections.
